FIx issue with overflow on Mobile

--- a/src/app/components/pages/services/services.component.css
+++ b/src/app/components/pages/services/services.component.css
@@ -15,17 +15,14 @@
   max-width: 30rem;
 }
 
+.reverse> :last-child {
+  grid-row-start: 1;
+}
+
 /* Responsive Mobile */
 @media only screen and (max-width: 519px) {
   .services-row {
-    grid-template-columns: 1fr;
+    display: block;
   }
 
-}
-
-/* Responsive Tablet & Desktop */
-@media only screen and (min-width: 520px) {
-  .reverse> :last-child {
-    grid-row-start: 1;
-  }
 }
